--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,3 @@
 [egg_info]
-#tag_build = .dev.1
-tag_svn_revision = true
+tag_build = a1
 
-[upload]
-repository = http://dl.astllc.org/eggs/upload
-
-[aliases]
-release =
-bdist_egg = bdist_egg rotate -k1 -m.egg
