documentation work & rearranging ================================ * added documentation for overview, ldap digests * lots of other documentation updates * renamed passlib.unix -> passlib.hosts * renamed passlib.sqldb -> passlib.servers * added passlib.servers.custom_app_context for quickstart purposes * added ldap {CLEARTEXT} support

--- a/passlib/default.cfg
+++ b/passlib/default.cfg
@@ -8,7 +8,7 @@
 
 #TODO: need to generate min rounds for specific cpu speed & verify time limitations
 
-ext_des_crypt.min_rounds = 30000
+bsdi_crypt.min_rounds = 30000
 phpass.min_rounds = 10
 bcrypt.min_rounds = 10
 sha256_crypt.min_rounds = 30000
