various CryptContext improvements ================================= * tweaked vary_rounds code to not "bunch up" when it hits min/max rounds * updated default policy settings * issues warning if min verify time is exceeded

--- a/passlib/default.cfg
+++ b/passlib/default.cfg
@@ -8,12 +8,12 @@
 
 #TODO: need to generate min rounds for specific cpu speed & verify time limitations
 
-bsdi_crypt.min_rounds = 30000
-phpass.min_rounds = 10
-bcrypt.min_rounds = 10
-sha256_crypt.min_rounds = 30000
-sha512_crypt.min_rounds = 30000
-sun_md5_crypt.min_rounds = 30000
-sha1_crypt.min_rounds = 30000
+all.vary_rounds = 10%
 
-#TODO: specify default configuration for unix systems (mainly, deprecating des-crypt, ext-des-crypt)
+bsdi_crypt.default_rounds = 30000
+phpass.default_rounds = 10
+bcrypt.default_rounds = 10
+sha1_crypt.default_rounds = 30000
+sun_md5_crypt.default_rounds = 30000
+sha256_crypt.default_rounds = 30000
+sha512_crypt.default_rounds = 30000
