--- a/passlib/default.cfg
+++ b/passlib/default.cfg
@@ -11,9 +11,17 @@
 all.vary_rounds = 10%
 
 bsdi_crypt.default_rounds = 30000
-phpass.default_rounds = 10
 bcrypt.default_rounds = 10
 sha1_crypt.default_rounds = 30000
 sun_md5_crypt.default_rounds = 30000
 sha256_crypt.default_rounds = 30000
 sha512_crypt.default_rounds = 30000
+
+ldap_bsdi_crypt.default_rounds = 30000
+ldap_bcrypt.default_rounds = 10
+ldap_sha1_crypt.default_rounds = 30000
+ldap_sun_md5_crypt.default_rounds = 30000
+ldap_sha256_crypt.default_rounds = 30000
+ldap_sha512_crypt.default_rounds = 30000
+
+phpass.default_rounds = 10
