--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 recursive-include docs *
-include LICENSE README passlib/*.cfg
+include LICENSE README CHANGES passlib/*.cfg
 prune docs/_build
 prune *.komodoproject
