bugfix: changed CryptPolicy to use SafeConfigParser (as it really should have all along)
* this may break parsing of some files which have "vary_rounds = 10%", that should now read "vary_rounds = 10%%".
* currently detecting that case, and falling back to old behavior + userwarning
* passlib 1.6 will let this be fatal.

--- a/passlib/default.cfg
+++ b/passlib/default.cfg
@@ -8,7 +8,7 @@
 
 #TODO: need to generate min rounds for specific cpu speed & verify time limitations
 
-all.vary_rounds = 10%
+all.vary_rounds = 10%%
 
 bsdi_crypt.default_rounds = 30000
 bcrypt.default_rounds = 10
