adding 2to3 + cond2to3 monkeypatch support to setup.py; all UTs pass py2.7 & 3.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [egg_info]
 tag_build = a1.dev
-tag_date = true ; wish this didn't use a "-" prefix
+tag_date = true
+    ; wish tag_date didn't use a "-" prefix
 
 [upload]
 sign = true
