--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,18 @@
 [egg_info]
+# XXX: should stop relying on this section,
+#      it's only used by setuptools/distribute,
+#      and will be phased out in distutils2 
 tag_build = a1.dev
 tag_date = true
-    ; wish tag_date didn't use a "-" prefix
 
 [upload]
 sign = true
 
 [upload_docs]
 upload_dir = docs/_build/html
+
+[test]
+test_suite = nose.collector
+
+[nosetests]
+where = passlib/tests
