added unittest2 to py3 tox configs

--- a/tox.ini
+++ b/tox.ini
@@ -20,10 +20,14 @@ deps =
 	bcryptor
 
 [testenv:py31]
-deps = nose
+deps = 
+       nose
+       unittest2py3k
 
 [testenv:py32]
-deps = nose
+deps = 
+       nose
+       unittest2py3k
 
 [testenv:pypy15]
 basepython = pypy1.5
