updated tox config, moved GAE helper into tests module to silence tox warning

--- a/tox.ini
+++ b/tox.ini
@@ -1,52 +1,92 @@
 [tox]
-envlist = py27,py32,py25,py26,py31,pypy15,pypy16,jython,gae
+envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,jython,gae25,gae27
 
+#===========================================================================
+# stock CPython VMs
+#===========================================================================
 [testenv]
-setenv = 
+setenv =
 	PASSLIB_TESTS = all
+	PASSLIB_TESTS_FUZZ_TIME = 20
 changedir = {envdir}
-commands = 
+commands =
 	nosetests passlib.tests
-
 deps =
 	nose
 	unittest2
 
 [testenv:py27]
-deps = 
+deps =
 	nose
 	unittest2
 	py-bcrypt
 	bcryptor
 
 [testenv:py31]
-deps = 
-       nose
-       unittest2py3k
+deps =
+    nose
+    unittest2py3k
 
 [testenv:py32]
-deps = 
-       nose
-       unittest2py3k
+deps =
+    nose
+    unittest2py3k
 
+#===========================================================================
+# PyPy VM - all target Python 2.7
+#===========================================================================
 [testenv:pypy15]
 basepython = pypy1.5
 
 [testenv:pypy16]
 basepython = pypy1.6
 
-[testenv:gae]
-# NOTE: annoyingly, have to use --without-sandbox
-#       or else nose / nosegae / GAE / virtualenv don't play nice.
-#       need to figure out what's the matter, and submit a patch.
-#       might just have to write a python script that sets everything
-#       up and runs nose manually
+[testenv:pypy17]
+basepython = pypy1.7
+setenv =
+	PASSLIB_TESTS = all
+	PASSLIB_TESTS_FUZZ_TIME = 20
+    PASSLIB_BUILTIN_BCRYPT = enable # only place this isn't punitively slow
+
+#===========================================================================
+# Jython - no special directives, currently same as py25
+#===========================================================================
+
+#===========================================================================
+# Google App Engine
+#===========================================================================
+[testenv:gae25]
 basepython = python2.5
-deps = 
+deps =
 	nose
-	nosegae
+    # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
+	nosegae==0.1.9
 	unittest2
 changedir = {envdir}/lib/python2.5/site-packages
 commands =
-        cp {toxinidir}/admin/gae-test-app.yaml app.yaml
-        nosetests --with-gae --without-sandbox passlib/tests
+    # setup custom app.yaml so GAE can run
+    python -m passlib.tests.tox_support . python
+
+	# have to run without sandbox for now, something in nose+GAE+virtualenv
+	# won't play nice with eachother.
+    nosetests --with-gae --without-sandbox passlib/tests
+
+[testenv:gae27]
+basepython = python2.7
+deps =
+	nose
+    # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
+	nosegae==0.1.9
+	unittest2
+changedir = {envdir}/lib/python2.7/site-packages
+commands =
+    # setup custom app.yaml so GAE can run
+    python -m passlib.tests.tox_support . python27
+
+	# have to run without sandbox for now, something in nose/GAE/virtualenv
+	# won't play nice with eachother.
+    nosetests --with-gae --without-sandbox passlib/tests
+
+#===========================================================================
+# EOF
+#===========================================================================
