--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+minversion=1.0
 envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,jython,gae25,gae27
 
 #===========================================================================
@@ -7,10 +8,10 @@ envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,jython,gae25,gae27
 [testenv]
 setenv =
 	PASSLIB_TESTS = all
-	PASSLIB_TESTS_FUZZ_TIME = 20
+	PASSLIB_TESTS_FUZZ_TIME = 10
 changedir = {envdir}
 commands =
-	nosetests passlib.tests
+	nosetests {posargs:passlib.tests}
 deps =
 	nose
 	unittest2
@@ -45,8 +46,13 @@ basepython = pypy1.6
 basepython = pypy1.7
 setenv =
 	PASSLIB_TESTS = all
-	PASSLIB_TESTS_FUZZ_TIME = 20
-    PASSLIB_BUILTIN_BCRYPT = enable # only place this isn't punitively slow
+	PASSLIB_TESTS_FUZZ_TIME = 10
+    # this is only interpreter when builtin bcrypt backend
+    # isn't punitively slow
+    PASSLIB_BUILTIN_BCRYPT = enable
+
+commands =
+	nosetests {posargs:passlib.tests}
 
 #===========================================================================
 # Jython - no special directives, currently same as py25
@@ -69,7 +75,7 @@ commands =
 
 	# have to run without sandbox for now, something in nose+GAE+virtualenv
 	# won't play nice with eachother.
-    nosetests --with-gae --without-sandbox passlib/tests
+    nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
 [testenv:gae27]
 basepython = python2.7
@@ -85,7 +91,7 @@ commands =
 
 	# have to run without sandbox for now, something in nose/GAE/virtualenv
 	# won't play nice with eachother.
-    nosetests --with-gae --without-sandbox passlib/tests
+    nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
 #===========================================================================
 # EOF
