assorted small details that weren't covered in the last few merges

--- a/tox.ini
+++ b/tox.ini
@@ -71,7 +71,7 @@ deps =
 changedir = {envdir}/lib/python2.5/site-packages
 commands =
     # setup custom app.yaml so GAE can run
-    python -m passlib.tests.tox_support . python
+    python -m passlib.tests.tox_support setup_gae . python
 
 	# have to run without sandbox for now, something in nose+GAE+virtualenv
 	# won't play nice with eachother.
@@ -87,7 +87,7 @@ deps =
 changedir = {envdir}/lib/python2.7/site-packages
 commands =
     # setup custom app.yaml so GAE can run
-    python -m passlib.tests.tox_support . python27
+    python -m passlib.tests.tox_support setup_gae . python27
 
 	# have to run without sandbox for now, something in nose/GAE/virtualenv
 	# won't play nice with eachother.
