unittest cleanups, better coverage, etc
* split ut2 backports into separate module to keep them distinct from customizations
* added backport of skip() / skipIf(), simplified a bunch of code
* "PASSLIB_TESTS" env var renamed to "PASSLIB_TEST_MODE",
  has one of three values (quick,default,full)
* assertWarningList() can now be used as context manager
* added TestCase.mktemp(), and some capability tests via TestCase.require_xxx()
* HandlerCase
	- subclasses can now modify do_xxx() settings and context using unified interface.
	- defaults to lower number of rounds for all hashes, to speed up UTs
	- create_backend_case() is now classmethod that yields multiple backends
	- added test to ensure os_crypt hashes forbid NULL chars
	- EncodingHandlerMixin for common tests of 'encoding' keyword

--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,75 @@
+#===========================================================================
+# NOTES
+# =====
+#
+# PASSLIB_TEST_MODE:
+#
+#    "quick"
+#        run the bare minimum tests to ensure functionality.
+#        variable-cost hashes are tested at their lowest setting.
+#        hash algorithms are only tested against the backend that will
+#        be used on the current host. no fuzz testing is done.
+#
+#    "default"
+#        same as ``"quick"``, except: hash algorithms are tested
+#        at default levels, and a brief round of fuzz testing is done
+#        for each hash.
+#
+#    "full"
+#        extra regression and internal tests are enabled, hash algorithms are tested
+#        against all available backends, unavailable ones are mocked whre possible,
+#        additional time is devoted to fuzz testing.
+#
+# testing of m2crypto integration - done in py27 test
+#
+# testing of django integration - split across various cpython tests:
+#  py25 - tests django 1.3
+#  py26 - tests no django
+#  py27 - tests latest django
+#
+# testing of bcrypt backends - split across various cpython tests:
+#  py25 - tests builtin bcrypt
+#  py27 - tests py-bcrypt, bcryptor
+#===========================================================================
+
+#===========================================================================
+# global config
+#===========================================================================
 [tox]
 minversion=1.0
-envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,jython,gae25,gae27
+envlist = py27,py32,py25,py26,py31,pypy15,pypy18,jython,gae25,gae27
 
 #===========================================================================
 # stock CPython VMs
 #===========================================================================
 [testenv]
 setenv =
-	PASSLIB_TESTS = all
-	PASSLIB_TESTS_FUZZ_TIME = 10
+	PASSLIB_TEST_MODE = full
+	PASSLIB_TEST_FUZZ_TIME = 10
 changedir = {envdir}
 commands =
 	nosetests {posargs:passlib.tests}
 deps =
 	nose
+    coverage
 	unittest2
+
+[testenv:py25]
+deps =
+    nose
+    coverage
+    # unittest2 omitted, to test backport code
+    django<1.4
 
 [testenv:py27]
 deps =
 	nose
+    coverage
 	unittest2
 	py-bcrypt
 	bcryptor
+    django
+    M2Crypto
 
 [testenv:py31]
 deps =
@@ -31,41 +79,30 @@ deps =
 [testenv:py32]
 deps =
     nose
+    coverage
     unittest2py3k
 
 #===========================================================================
-# PyPy VM - all target Python 2.7
+# PyPy VM - all target Python 2.7; supporting 1.5-1.8
 #===========================================================================
 [testenv:pypy15]
 basepython = pypy1.5
 
-[testenv:pypy16]
-basepython = pypy1.6
-
-[testenv:pypy17]
-basepython = pypy1.7
-setenv =
-	PASSLIB_TESTS = all
-	PASSLIB_TESTS_FUZZ_TIME = 10
-    # this is only interpreter when builtin bcrypt backend
-    # isn't punitively slow
-    PASSLIB_BUILTIN_BCRYPT = enable
-
-commands =
-	nosetests {posargs:passlib.tests}
+[testenv:pypy18]
+basepython = pypy1.8
 
 #===========================================================================
 # Jython - no special directives, currently same as py25
 #===========================================================================
 
 #===========================================================================
-# Google App Engine
+# Google App Engine integration
 #===========================================================================
 [testenv:gae25]
 basepython = python2.5
 deps =
-	nose
     # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
+	nose
 	nosegae==0.1.9
 	unittest2
 changedir = {envdir}/lib/python2.5/site-packages
@@ -73,15 +110,15 @@ commands =
     # setup custom app.yaml so GAE can run
     python -m passlib.tests.tox_support setup_gae . python
 
-	# have to run without sandbox for now, something in nose+GAE+virtualenv
-	# won't play nice with eachother.
+	# FIXME: have to run using --without-sandbox for now,
+    # something in nose+GAE+virtualenv won't play nice with eachother.
     nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
 [testenv:gae27]
 basepython = python2.7
 deps =
-	nose
     # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
+	nose
 	nosegae==0.1.9
 	unittest2
 changedir = {envdir}/lib/python2.7/site-packages
@@ -89,8 +126,8 @@ commands =
     # setup custom app.yaml so GAE can run
     python -m passlib.tests.tox_support setup_gae . python27
 
-	# have to run without sandbox for now, something in nose/GAE/virtualenv
-	# won't play nice with eachother.
+	# FIXME: have to run using --without-sandbox for now,
+    # something in nose+GAE+virtualenv won't play nice with eachother.
     nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
 #===========================================================================
