final tweaks to test config files

--- a/tox.ini
+++ b/tox.ini
@@ -37,22 +37,22 @@
 #===========================================================================
 [tox]
 minversion=1.0
-envlist = py27,py32,py25,py26,py31,pypy15,pypy18,jython,gae25,gae27
+envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,pypy18,jython,gae25,gae27
 
 #===========================================================================
 # stock CPython VMs
 #===========================================================================
 [testenv]
 setenv =
-	PASSLIB_TEST_MODE = full
-	PASSLIB_TEST_FUZZ_TIME = 10
+    PASSLIB_TEST_MODE = full
+    PASSLIB_TEST_FUZZ_TIME = 10
 changedir = {envdir}
 commands =
-	nosetests {posargs:passlib.tests}
+    nosetests {posargs:passlib.tests}
 deps =
-	nose
+    nose
     coverage
-	unittest2
+    unittest2
 
 [testenv:py25]
 deps =
@@ -63,11 +63,11 @@ deps =
 
 [testenv:py27]
 deps =
-	nose
+    nose
     coverage
-	unittest2
-	py-bcrypt
-	bcryptor
+    unittest2
+    py-bcrypt
+    bcryptor
     django
     M2Crypto
 
@@ -88,6 +88,12 @@ deps =
 [testenv:pypy15]
 basepython = pypy1.5
 
+[testenv:pypy16]
+basepython = pypy1.6
+
+[testenv:pypy17]
+basepython = pypy1.7
+
 [testenv:pypy18]
 basepython = pypy1.8
 
@@ -102,15 +108,15 @@ basepython = pypy1.8
 basepython = python2.5
 deps =
     # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
-	nose
-	nosegae==0.1.9
-	unittest2
+    nose
+    nosegae==0.1.9
+    unittest2
 changedir = {envdir}/lib/python2.5/site-packages
 commands =
     # setup custom app.yaml so GAE can run
     python -m passlib.tests.tox_support setup_gae . python
 
-	# FIXME: have to run using --without-sandbox for now,
+    # FIXME: have to run using --without-sandbox for now,
     # something in nose+GAE+virtualenv won't play nice with eachother.
     nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
@@ -118,15 +124,17 @@ commands =
 basepython = python2.7
 deps =
     # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
-	nose
-	nosegae==0.1.9
-	unittest2
+    nose
+    nosegae==0.1.9
+    unittest2
 changedir = {envdir}/lib/python2.7/site-packages
 commands =
     # setup custom app.yaml so GAE can run
     python -m passlib.tests.tox_support setup_gae . python27
 
-	# FIXME: have to run using --without-sandbox for now,
+    # TODO: figure out how to select django 1.2 so the extension under gae.
+
+    # FIXME: have to run using --without-sandbox for now,
     # something in nose+GAE+virtualenv won't play nice with eachother.
     nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
