misc testing fixes
* bcrypt fuzz fix: detect $2$ hashes w/ passwords like 'abc' 'abcabc' and regenerate,
  since $2$ would hash them the same. one in a million chance, but I hit it.
* django_bcrypt: skip multi-ident testing entirely, only one prefix is used.
* get_fuzz_settings() now handles passwords too, so handlers can alter them
* get_fuzz_ident() now checks os_supports_ident() directly, so bcrypt test doesn't have to
* test_14_salt_chars now cleans up salt, so bcrypt test doesn't have to
* glitch in fuzz skip code
* add tox.ini to sdist

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 #===========================================================================
-# NOTES
-# =====
+# Passlib configuration for TOX
+# =============================
 #
 # PASSLIB_TEST_MODE:
 #
@@ -36,7 +36,7 @@
 # global config
 #===========================================================================
 [tox]
-minversion=1.0
+minversion=1.3
 envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,pypy18,jython,gae25,gae27
 
 #===========================================================================
@@ -45,7 +45,6 @@ envlist = py27,py32,py25,py26,py31,pypy15,pypy16,pypy17,pypy18,jython,gae25,gae2
 [testenv]
 setenv =
     PASSLIB_TEST_MODE = full
-    PASSLIB_TEST_FUZZ_TIME = 10
 changedir = {envdir}
 commands =
     nosetests {posargs:passlib.tests}
