project-wide whitespace & comment cleanup (it's been a couple of years)

--- a/tox.ini
+++ b/tox.ini
@@ -138,5 +138,5 @@ commands =
     nosetests --with-gae --without-sandbox {posargs:passlib/tests}
 
 #===========================================================================
-# EOF
+# eof
 #===========================================================================
