various documentation updates

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
 recursive-include docs *
-include LICENSE README CHANGES passlib/*.cfg passlib/tests/*.cfg tox.ini setup.cfg
-prune *.komodoproject
+include LICENSE README CHANGES passlib/tests/*.cfg tox.ini setup.cfg
