--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,8 @@
 # testing of m2crypto integration - done in py27 test
 #
 # testing of django integration - split across various cpython tests:
-#  py25 - tests django 1.3
-#  py26 - tests no django
-#  py27 - tests latest django
+#  py27,py33 - tests latest django
+#  djangoXX - tests specific django versions
 #
 # testing of bcrypt backends - split across various cpython tests:
 #  py25 - tests builtin bcrypt
@@ -36,8 +35,8 @@
 # global config
 #===========================================================================
 [tox]
-minversion=1.3
-envlist = py27,py32,py25,py26,py31,py33,pypy1.5,pypy16,pypy17,pypy18,pypy19,jython,gae25,gae27
+minversion=1.4
+envlist = py27,py33,py25,py26,py31,py32,pypy,pypy3,django12,django13,django14,django15,jython,gae25,gae27
 
 #===========================================================================
 # stock CPython VMs
@@ -54,13 +53,14 @@ deps =
     unittest2
 
 [testenv:py25]
+# NOTE: unittest2 omitted, to test unittest backport code
 deps =
     nose
     coverage
-    # unittest2 omitted, to test backport code
-    django<1.4
 
 [testenv:py27]
+# NOTE: M2Crypto requires swig & libssl-dev,
+#       a number of packages required C compiler & python-dev
 deps =
     nose
     coverage
@@ -82,28 +82,75 @@ deps =
     unittest2py3k
 
 [testenv:py33]
+# TODO: test bcrypt library w/ py3 compatibility
 deps =
     nose
     coverage
     unittest2py3k
+    django
+
+#===========================================================================
+# django integration testing
+#===========================================================================
+[testenv:django12]
+deps =
+    nose
+    unittest2
+    django<1.3
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
+[testenv:django13]
+deps =
+    nose
+    unittest2
+    django<1.4
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
+[testenv:django14]
+deps =
+    nose
+    unittest2
+    django<1.5
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
+[testenv:django15]
+deps =
+    nose
+    unittest2
+    django<1.6
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
+[testenv:django]
+deps =
+    nose
+    unittest2
+    django
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
+[testenv:django-py3]
+basepython = python3
+deps =
+    nose
+    unittest2py3k
+    django
+commands =
+    nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 #===========================================================================
 # PyPy VM - all releases currently target Python 2.7
 #===========================================================================
-[testenv:pypy15]
-basepython = pypy1.5
+[testenv:pypy]
+# pypy (as of v1.6 - v2.2) targets Python 2.7
+basepython = pypy
 
-[testenv:pypy16]
-basepython = pypy1.6
-
-[testenv:pypy17]
-basepython = pypy1.7
-
-[testenv:pypy18]
-basepython = pypy1.8
-
-[testenv:pypy19]
-basepython = pypy1.9
+[testenv:pypy3]
+# pypy3 (as of v2.1b1) targets Python 3.2
+basepython = pypy3
 
 #===========================================================================
 # Jython - no special directives, currently same as py25
@@ -112,7 +159,11 @@ basepython = pypy1.9
 #===========================================================================
 # Google App Engine integration
 #===========================================================================
+
 [testenv:gae25]
+# NOTE: google is deprecating py25 support, per
+#       https://developers.google.com/appengine/docs/python/python25/diff27
+#       and so this test can probably be removed sometime after 2014-01-01
 basepython = python2.5
 deps =
     # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
