added support for bcrypt library (issue 49), also split bcrypt handler tests out into separate file for ease of testing

--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,9 @@
 #  djangoXX - tests specific django versions
 #
 # testing of bcrypt backends - split across various cpython tests:
-#  py25 - tests builtin bcrypt
-#  py27 - tests py-bcrypt, bcryptor
+#  py27 - tests bcrypt & bcryptor (so they can be cross-checked)
+#  py33 - tests bcrypt
+#  py-bcrypt - tests py-bcrypt & bcryptor (so they can be cross-checked)
 #===========================================================================
 
 #===========================================================================
@@ -36,7 +37,7 @@
 #===========================================================================
 [tox]
 minversion=1.4
-envlist = py27,py33,py25,py26,py31,py32,pypy,pypy3,django12,django13,django14,django15,jython,gae25,gae27
+envlist = py27,py33,py25,py26,py31,py32,pypy,pypy3,py-bcrypt,py-bcrypt-py3,django12,django13,django14,django15,jython,gae25,gae27
 
 #===========================================================================
 # stock CPython VMs
@@ -61,11 +62,12 @@ deps =
 [testenv:py27]
 # NOTE: M2Crypto requires swig & libssl-dev,
 #       a number of packages required C compiler & python-dev
+# NOTE: bcryptor requires Cython
 deps =
     nose
     coverage
     unittest2
-    py-bcrypt
+    bcrypt
     bcryptor
     django
     M2Crypto
@@ -78,19 +80,38 @@ deps =
 [testenv:py32]
 deps =
     nose
-    coverage
     unittest2py3k
 
 [testenv:py33]
-# TODO: test bcrypt library w/ py3 compatibility
 deps =
     nose
     coverage
     unittest2py3k
     django
+    bcrypt
 
 #===========================================================================
-# django integration testing
+# bcrypt library-specific testing
+#===========================================================================
+[testenv:py-bcrypt]
+deps =
+    bcryptor
+    py-bcrypt
+    {[testenv]deps}
+commands =
+    nosetests {posargs:passlib.tests.test_handlers_bcrypt}
+
+[testenv:py-bcrypt-py3]
+basepython = python3
+deps =
+#    bcryptor -- has py3 installation issues
+    py-bcrypt
+    {[testenv:py32]deps}
+commands =
+    nosetests {posargs:passlib.tests.test_handlers_bcrypt}
+
+#===========================================================================
+# django version-specific testing
 #===========================================================================
 [testenv:django12]
 deps =
