--- a/tox.ini
+++ b/tox.ini
@@ -115,50 +115,50 @@ commands =
 #===========================================================================
 [testenv:django12]
 deps =
-    nose
-    unittest2
     django<1.3
+    {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 [testenv:django13]
 deps =
-    nose
-    unittest2
     django<1.4
+    {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 [testenv:django14]
 deps =
-    nose
-    unittest2
     django<1.5
+    bcrypt
+    {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 [testenv:django15]
 deps =
-    nose
-    unittest2
     django<1.6
+    bcrypt
+    {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 [testenv:django]
+# NOTE: including bcrypt so django bcrypt hasher is included
 deps =
-    nose
-    unittest2
     django
+    bcrypt
+    {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
 [testenv:django-py3]
+# NOTE: including bcrypt so django bcrypt hasher is included
 basepython = python3
 deps =
-    nose
-    unittest2py3k
     django
+    bcrypt
+    {[testenv:py32]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
@@ -168,10 +168,16 @@ commands =
 [testenv:pypy]
 # pypy (as of v1.6 - v2.2) targets Python 2.7
 basepython = pypy
+deps =
+    bcrypt
+    {[testenv]deps}
 
 [testenv:pypy3]
 # pypy3 (as of v2.1b1) targets Python 3.2
 basepython = pypy3
+deps =
+    bcrypt
+    {[testenv:py32]deps}
 
 #===========================================================================
 # Jython - no special directives, currently same as py25
