updated rounds values based on timing tests. also:
* a number of hashes now feed off pbkdf2_XXX.default_rounds
* added security note re: dlitz_pbkdf2_sha1

--- a/tox.ini
+++ b/tox.ini
@@ -138,7 +138,7 @@ commands =
 [testenv:django15]
 deps =
     django<1.6
-    bcrypt
+    py-bcrypt
     {[testenv]deps}
 commands =
     nosetests {posargs:passlib.tests.test_ext_django passlib.tests.test_handlers_django}
