removed py27, gae25 from tox config, updated GAE app.yaml -- tox, virtualenv, setuptools no longer supporting py25, have to run those manually. should consider dropping py25 in passlib 1.7.

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@
 #===========================================================================
 [tox]
 minversion=1.4
-envlist = py27,py33,py25,py26,py31,py32,pypy,pypy3,py-bcrypt,py-bcrypt-py3,django12,django13,django14,django15,jython,gae25,gae27
+envlist = py27,py33,py26,py31,py32,pypy,pypy3,py-bcrypt,py-bcrypt-py3,django12,django13,django14,django15,django,django-py3,gae27,jython27
 
 #===========================================================================
 # stock CPython VMs
@@ -52,12 +52,6 @@ deps =
     nose
     coverage
     unittest2
-
-[testenv:py25]
-# NOTE: unittest2 omitted, to test unittest backport code
-deps =
-    nose
-    coverage
 
 [testenv:py27]
 # NOTE: M2Crypto requires swig & libssl-dev,
@@ -185,40 +179,19 @@ deps =
 
 #===========================================================================
 # Google App Engine integration
+# NOTE: for this to work, the GAE SDK should be installed in
+#       /usr/local/google_appengine, or set nosegae's --gae-lib-root
 #===========================================================================
-
-[testenv:gae25]
-# NOTE: google is deprecating py25 support, per
-#       https://developers.google.com/appengine/docs/python/python25/diff27
-#       and so this test can probably be removed sometime after 2014-01-01
-basepython = python2.5
-deps =
-    # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
-    nose
-    nosegae==0.1.9
-    unittest2
-changedir = {envdir}/lib/python2.5/site-packages
-commands =
-    # setup custom app.yaml so GAE can run
-    python -m passlib.tests.tox_support setup_gae . python
-
-    # FIXME: have to run using --without-sandbox for now,
-    # something in nose+GAE+virtualenv won't play nice with eachother.
-    nosetests --with-gae --without-sandbox {posargs:passlib/tests}
-
 [testenv:gae27]
 basepython = python2.7
 deps =
-    # FIXME: getting all kinds of errors when using nosegae 0.2.0 :(
     nose
-    nosegae==0.1.9
+    nosegae
     unittest2
 changedir = {envdir}/lib/python2.7/site-packages
 commands =
     # setup custom app.yaml so GAE can run
     python -m passlib.tests.tox_support setup_gae . python27
-
-    # TODO: figure out how to select django 1.2 so the extension under gae.
 
     # FIXME: have to run using --without-sandbox for now,
     # something in nose+GAE+virtualenv won't play nice with eachother.
