updated tox.ini with notes about different environments

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,15 @@
 #  py27 - tests bcrypt & bcryptor (so they can be cross-checked)
 #  py33 - tests bcrypt
 #  py-bcrypt - tests py-bcrypt & bcryptor (so they can be cross-checked)
+#
+# environments not in default list
+#  py25 - running tests separately, no longer supported by
+#         tox/setuptools/pip without lots of effort
+#  jython25 - same as py25
+#  jython27 - not testable even outside of tox: easy_install etc don't work,
+#             primarily due to http://bugs.jython.org/issue2066
+#             and probably http://bugs.jython.org/issue2016 as well.
+#  gae25 - no longer supported by gae sdk, and would be same as py25 otherwise
 #===========================================================================
 
 #===========================================================================
@@ -37,7 +46,7 @@
 #===========================================================================
 [tox]
 minversion=1.4
-envlist = py27,py33,py26,py31,py32,pypy,pypy3,py-bcrypt,py-bcrypt-py3,django12,django13,django14,django15,django,django-py3,gae27,jython27
+envlist = py27,py33,py26,py31,py32,pypy,pypy3,py-bcrypt,py-bcrypt-py3,django12,django13,django14,django15,django,django-py3,gae27
 
 #===========================================================================
 # stock CPython VMs
@@ -67,6 +76,9 @@ deps =
     M2Crypto
 
 [testenv:py31]
+# NOTE: getting this to work under pip-1.4.1 requires hacking in fix
+#       to deal with https://github.com/pypa/pip/issues/1105
+#       into virtualenv_support package.
 deps =
     nose
     unittest2py3k
@@ -174,8 +186,11 @@ deps =
     {[testenv:py32]deps}
 
 #===========================================================================
-# Jython - no special directives, currently same as py25
+# Jython VM
 #===========================================================================
+
+[testenv:jython27]
+basepython = jython2.7
 
 #===========================================================================
 # Google App Engine integration
